[metadata]
name = swarmclientpy
version = 0.0.1
description = A Swarm client library for Python
author = Charlie Murphy
author_email = cmsmurp00@gmail.com
long_description = file: README.md
long_description_content_type = text/markdown
license = Zlib
license_file = LICENSE
url = https://github.com/ChillyCider/swarmclientpy
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: zlib/libpng License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Communications :: File Sharing
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Operating System :: OS Independent

[options]
packages=find:
install_requires =
    pycryptodome ~=3.9

[options.extras_require]
testing =
    pytest

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths =
    tests
